err/libpgm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/libpgm'...
Listing './lib/python3.5/site-packages/libpgm/CPDtypes'...
Compiling './lib/python3.5/site-packages/libpgm/CPDtypes/lg.py'...
***   File "./lib/python3.5/site-packages/libpgm/CPDtypes/lg.py", line 79
    print "Attempted to sample node with unassigned parents."
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/libpgm/CPDtypes/lgandd.py'...
***   File "./lib/python3.5/site-packages/libpgm/CPDtypes/lgandd.py", line 98
    print "Did not find LG and discrete type parents."
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/libpgm/dictionary.py'...
***   File "./lib/python3.5/site-packages/libpgm/dictionary.py", line 81
    raise ValueError, "Convert to JSON from input file failed. Check formatting."
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libpgm/discretebayesiannetwork.py'...
***   File "./lib/python3.5/site-packages/libpgm/discretebayesiannetwork.py", line 87
    raise Exception, "Inputs were malformed; first arg must contain V and E attributes and second arg must contain Vdata attribute."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libpgm/dyndiscbayesiannetwork.py'...
***   File "./lib/python3.5/site-packages/libpgm/dyndiscbayesiannetwork.py", line 89
    raise Exception, "Inputs were malformed; first arg must contain V and E attributes and second arg must contain initial_Vdata and twotbn_Vdata attributes."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libpgm/hybayesiannetwork.py'...
***   File "./lib/python3.5/site-packages/libpgm/hybayesiannetwork.py", line 70
    raise Exception, "Inputs were malformed; first arg must contain V and E attributes and second arg must contain Vdata and nodes attributes."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libpgm/lgbayesiannetwork.py'...
***   File "./lib/python3.5/site-packages/libpgm/lgbayesiannetwork.py", line 83
    raise Exception, "Inputs were malformed; first arg must contain V and E attributes and second arg must contain Vdata attribute."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libpgm/nodedata.py'...
***   File "./lib/python3.5/site-packages/libpgm/nodedata.py", line 91
    print "Error: NodeData did not recognize input file format."
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/libpgm/pgmlearner.py'...
***   File "./lib/python3.5/site-packages/libpgm/pgmlearner.py", line 35
    raise ImportError, "numpy is not installed on your system."
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libpgm/tablecpdfactor.py'...
***   File "./lib/python3.5/site-packages/libpgm/tablecpdfactor.py", line 235
    raise Exception, "Second arg was not a possible value of first arg."
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libpgm-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/utils'...
Compiling './lib/python3.5/site-packages/utils/bntextutils.py'...
***   File "./lib/python3.5/site-packages/utils/bntextutils.py", line 22
    print "%s --> %s" % (e[0], e[1])
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
